[gd_scene load_steps=4 format=3 uid="uid://cspogqh8654q2"]

[ext_resource type="Script" path="res://addons/godot_midi/views/note.gd" id="1_rc30e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8vikw"]
bg_color = Color(0.231373, 0.576471, 0, 1)
border_width_left = 2
border_width_right = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xweph"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_bottom = 1

[node name="Panel" type="Panel"]
offset_right = 2.0
offset_bottom = 10.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8vikw")
script = ExtResource("1_rc30e")

[node name="Tooltip" type="Panel" parent="."]
visible = false
z_index = 1000
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -43.455
offset_right = 59.89
offset_bottom = -11.965
grow_vertical = 0
scale = Vector2(1.03124, 1)
theme_override_styles/panel = SubResource("StyleBoxFlat_xweph")

[node name="NoteName" type="Label" parent="Tooltip"]
layout_mode = 0
offset_left = 1.9394
offset_top = -3.59
offset_right = 41.9394
offset_bottom = 22.41
scale = Vector2(0.998396, 1)
text = "A4"

[node name="NoteNumber" type="Label" parent="Tooltip"]
layout_mode = 0
offset_left = 1.9394
offset_top = 10.455
offset_right = 41.9394
offset_bottom = 36.455
scale = Vector2(0.998396, 1)
text = "123"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
